# Seven-Extension-Public

./: README.md  mkdocs.yml  pyproject.toml
seven_extension/: Makefile
seven_extension/apps/authentication/: forms.py  urls.py  views.py
seven_extension/apps/clientes/: admin.py  app_geracao_clientes.py  apps.py  consumers.py  forms.py  methods.py  models.py  routing.py  urls.py  views.py
seven_extension/apps/clientes/jobs/: get_concessionaria_data.py  get_inversor_energy.py
seven_extension/apps/clientes/management/commands/: runscheduler.py
seven_extension/apps/clientes/static/: styles.css
seven_extension/apps/home/: models.py  urls.py  views.py
seven_extension/apps/static/: readme.md
seven_extension/apps/templates/accounts/: login.html  register.html
seven_extension/apps/templates/clientes/: geracao.html  index.html  insere_cliente.html  lista_clientes.html  notificacao.html  profile_user.html
seven_extension/apps/templates/home/: auth-reset-password.html  bc_button.html  index.html  login.html  overview.html  page-403.html  page-404.html  page-500.html  register.html
seven_extension/apps/templates/includes/: navigation.html  scripts.html  sidebar.html
seven_extension/apps/templates/layouts/: base-fullscreen.html  base.html
seven_extension/core/: asgi.py  custom_exceptions.py  settings.py  urls.py  user_backend.py  user_middleware.py  wsgi.py
seven_extension/core/insert_scripts/: insert_credencial_inversores.py  insert_empresa.py  insert_estados.py  insert_inversores.py  insert_tipo_usuario.py
seven_extension/staticfiles/: readme.md
tests/tests/: methods_test.py
